添加最大弹出限制 / 社区窗口支持

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,8 +2,8 @@
     "jasonxu.alert.name": "Alert",
     "jasonxu.alert.description": "Alert Extension",
     "jasonxu.alert.alert.messageId": "Alert",
-    "jasonxu.alert.simple": "alert [MESSAGE]",
-    "jasonxu.alert.confirm": "confirm [MESSAGE]",
+    "jasonxu.alert.simple": "alert [TITLE] [MESSAGE]",
+    "jasonxu.alert.confirm": "confirm [TITLE] [MESSAGE]",
     "jasonxu.alert.prompt": "input [MESSAGE]",
     "jasonxu.alert.openWindow": "open window [URL] title [TITLE] width [WIDTH] height [HEIGHT]"
 }
